--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,8 @@
 .song {
     padding: 15px;
-    border-color: red;
+    border: 2px solid red;
     text-align: center;
+    width: 200px;
 }
 h1 {
     color: blue;
