Change index.html and scss

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 .song {
     padding: 15px;
-    border: 2px solid red;
+    border: 2px solid green;
     text-align: center;
     width: 200px;
 }
